--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dat.mylabs.Lab1.SecondActivity">
+    tools:context=".Lab1.Lab1SecondActivity">
 
     <TextView
         android:id="@+id/result"
