--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,9 @@
         <item
             android:id="@+id/lab1"
             android:title="Lab 1" />
+        <item
+            android:id="@+id/lab2"
+            android:title="Lab 2" />
     </group>
 
 
