--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,6 +8,9 @@
         <item
             android:id="@+id/lab2"
             android:title="Lab 2" />
+        <item
+            android:id="@+id/lab3"
+            android:title="Lab 3" />
     </group>
 
 
