--- a/app/src/main/res/layout/activity_lab3.xml
+++ b/app/src/main/res/layout/activity_lab3.xml
@@ -37,6 +37,23 @@
             android:layout_gravity="center"
             android:layout_margin="16dp"
             android:text="Stop Service" />
+
+        <Button
+            android:id="@+id/startBoundService"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:text="Start Bound Service" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="16dp"
+            android:text="New Text"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
     <Button
@@ -46,4 +63,5 @@
         android:layout_gravity="bottom|center"
         android:layout_margin="24dp"
         android:text="Next" />
+
 </FrameLayout>
