--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,6 +11,9 @@
         <item
             android:id="@+id/lab3"
             android:title="Lab 3" />
+        <item
+            android:id="@+id/lab4"
+            android:title="Lab 4" />
     </group>
 
 
